--- a/20190926-springcloud-management/pom.xml
+++ b/20190926-springcloud-management/pom.xml
@@ -15,6 +15,7 @@
         <module>20190926-springcloud-model</module>
         <module>20190926-springcloud-mapper</module>
         <module>20190926-springcloud-service</module>
+        <module>20190926-springcloud-api</module>
     </modules>
 
 
