--- a/20190926-springcloud-management/20190926-springcloud-api/pom.xml
+++ b/20190926-springcloud-management/20190926-springcloud-api/pom.xml
@@ -3,19 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>20190926-springcloud-parent</artifactId>
+        <artifactId>20190926-springcloud-management</artifactId>
         <groupId>com.aaa.zhou.springcloud</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <packaging>pom</packaging>
-    <modules>
-        <module>20190926-springcloud-consumer-6081</module>
-        <module>20190926-springcloud-consumer-ribbon-6082</module>
-        <module>20190926-springcloud-consumer-feign-6083</module>
-    </modules>
 
-    <artifactId>20190926-springcloud-consumer-management</artifactId>
+    <artifactId>20190926-springcloud-api</artifactId>
 
     <dependencies>
         <dependency>
@@ -24,8 +18,8 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
     </dependencies>
 
