--- a/20190926-springcloud-consumer-management/20190926-springcloud-consumer-ribbon-6082/src/main/resources/config/application.properties
+++ b/20190926-springcloud-consumer-management/20190926-springcloud-consumer-ribbon-6082/src/main/resources/config/application.properties
@@ -6,9 +6,9 @@ eureka.client.service-url.defaultZone=http://eureka01:7081/eureka,http://eureka0
 
 # ribbon脱离eureka
 # ribbon不加载eureka
-ribbon.eureka.enabled=false
+#ribbon.eureka.enabled=false
 # 配置ribbon负载均衡的服务器(8081,8082,8083)
 # 配置规则使用的是spring.application.name(必须要小写)
-user-provider.ribbon.listOfServers=localhost:8081,localhost:8082,localhost:8083
+#user-provider.ribbon.listOfServers=localhost:8081,localhost:8082,localhost:8083
 # 配置负载均衡算法
-user-provider.ribbon.NFLoadBalancerRuleClassName=com.netflix.loadbalancer.RoundRobinRule
+#user-provider.ribbon.NFLoadBalancerRuleClassName=com.netflix.loadbalancer.RoundRobinRule
